src/test/resources/compilation_error/prefix_already_bound_error_2.funcky
foo: "funcky:foo"
bar: "funcky:bar"
bar: "funcky:bar"
